--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 ADMIN_ID=1341868920
 TARGET_GROUP_ID=-1002586522122
 BOT_TOKEN=7968224442:AAHYJ4Sh37I_qaUeNvPgZ6BHtg1ZijICUy4
+MONGODB_URI=mongodb+srv://n8nmajed_db_user:majed@2oo2@7@21@cluster0.zfz1rx6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PAYEER_ACCOUNT=P1060900640
 BITCOIN_WALLET_ADDRESS=14qaZcSda7az1i9FFXp92vgpj9gj4wrK8z
